--- a/package.json
+++ b/package.json
@@ -29,7 +29,7 @@
     "@bugsnag/js": "^7.22.4",
     "@bugsnag/plugin-react": "^7.19.0",
     "@csstools/normalize.css": "^10.1.0",
-    "@emotion/react": "^11.11.4",
+    "@emotion/react": "^11.14.0",
     "@fortawesome/fontawesome-svg-core": "^6.7.2",
     "@fortawesome/free-brands-svg-icons": "^6.7.2",
     "@fortawesome/free-regular-svg-icons": "^6.7.2",
@@ -37,10 +37,12 @@
     "@fortawesome/react-fontawesome": "^0.2.2",
     "@nypl/design-system-react-components": "^0.7.2",
     "@nypl/dgx-svg-icons": "^0.3.12",
-    "@theme-ui/color": "^0.16.2",
-    "@theme-ui/components": "^0.16.2",
-    "@theme-ui/match-media": "^0.16.2",
-    "@theme-ui/mdx": "^0.16.2",
+    "@theme-ui/color": "^0.17.2",
+    "@theme-ui/components": "^0.17.2",
+    "@theme-ui/core": "^0.17.2",
+    "@theme-ui/css": "^0.17.2",
+    "@theme-ui/match-media": "^0.17.2",
+    "@theme-ui/mdx": "^0.17.2",
     "@thepalaceproject/webpub-viewer": "^0.1.0",
     "chalk": "^4.1.0",
     "date-fns": "^4.1.0",
@@ -63,7 +65,7 @@
     "react-redux": "^7.1.0",
     "styled-system": "^5.1.2",
     "swr": "^1.3.0",
-    "theme-ui": "^0.16.2",
+    "theme-ui": "^0.17.2",
     "tslib": "^2.3.0"
   },
   "devDependencies": {
@@ -93,15 +95,15 @@
     "@types/react-dom": "^18.2.21",
     "@types/react-redux": "^7.1.9",
     "@types/xml2js": "^0.4.5",
-    "@typescript-eslint/eslint-plugin": "^7.0.1",
-    "@typescript-eslint/parser": "^7.0.1",
+    "@typescript-eslint/eslint-plugin": "^8.46.2",
+    "@typescript-eslint/parser": "^8.46.2",
     "babel-jest": "^29.7.0",
     "babel-loader": "^8.2.1",
     "cypress": "^13.15.2",
-    "eslint": "8.56.0",
-    "eslint-config-prettier": "^6.11.0",
-    "eslint-plugin-jsx-a11y": "^6.4.1",
-    "eslint-plugin-prettier": "^3.4.0",
+    "eslint": "^8.57.1",
+    "eslint-config-prettier": "^9.1.2",
+    "eslint-plugin-jsx-a11y": "^6.10.2",
+    "eslint-plugin-prettier": "^5.5.4",
     "eslint-plugin-react": "^7.24.0",
     "eslint-plugin-react-hooks": "^4.2.0",
     "fetch-mock": "^10.1.1",
@@ -111,9 +113,9 @@
     "jest-fetch-mock": "^3.0.3",
     "jest-jasmine2": "^29.7.0",
     "msw": "^2.6.5",
-    "prettier": "2.1.1",
+    "prettier": "^3.6.2",
     "react-is": "^18.2.0",
-    "typescript": "^4.8.4",
+    "typescript": "^5.9.3",
     "webpack-bugsnag-plugins": "^1.8.0"
   },
   "prettier": {
